# strf

./: .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  CMakelists.txt  Config.cmake.in  Jamfile.v2  README.md  appveyor.yml  index.html  v0.12  v0.13  v0.15
benchmarks/: CMakeLists.txt  Jamfile  input_float.cpp  input_int.cpp  join.cpp  tmp.1.cpp  tmp.cpp  to_char_ptr.cpp  to_string.cpp  tr_string.cpp  utf16_to_utf8.cpp  width_calculation.cpp
benchmarks/compilation/: args.hpp  args_shuffle.hpp  fmt_compile_args_shuffle.hpp  run_benchmarks.py  strf_args_shuffle.hpp  to_FILE_fmtlib.cpp  to_FILE_fmtlib_c.cpp  to_FILE_fprintf.cpp  to_FILE_main.cpp  to_FILE_strf.cpp  to_FILE_strf_tr.cpp  to_charptr_fmtlib.cpp  to_charptr_fmtlib_c.cpp  to_charptr_fmtlib_n.cpp  to_charptr_fmtlib_n_c.cpp  to_charptr_main.cpp  to_charptr_sprintf.cpp  to_charptr_strf.cpp  to_charptr_strf_tr.cpp  to_ostream_fmtlib.cpp  to_ostream_fmtlib_c.cpp  to_ostream_itself.cpp  to_ostream_main.cpp  to_ostream_strf.cpp  to_ostream_strf_tr.cpp  to_string_fmtlib.cpp  to_string_fmtlib_c.cpp  to_string_main.cpp  to_string_strf.cpp  to_string_strf_tr.cpp
doc/: Jamfile.v2  (+83 more)
example/: CMakeLists.txt  CMakelists.txt  Jamfile.v2  appendQString.cpp  assembly_string.cpp  assembly_string_input.cpp  cuda.cu  custom_width_calculation.cpp  encoding_conversion.cpp  extend_input_base64.cpp  extend_input_ipv4.cpp  extend_input_ipv4_v2.cpp  extend_input_ipv6.cpp  extend_input_point2D.cpp  extend_input_std_complex.cpp  extend_input_template.cpp  extend_output_toQString.cpp  facets.cpp  facets_pack_as_input.cpp  format_functions.cpp  joins.cpp  llfio.cpp  numpunct_facets.cpp  override_bool.cpp  overview.cpp  range_input.cpp  readme_md.cpp  std_complex_printer.cpp  syntax_samples.cpp  toQString.cpp  tr_string.cpp  tr_string_input.cpp  trivial_sample.cpp  width_calculation_in_encoding_conversion.cpp
example/v0/: Jamfile.v2  assembly_string.cpp  assembly_string_input.cpp  custom_decoder.cpp  custom_decoding_error_handling.cpp  custom_encoding_error_handling.cpp  custom_width_calculation.cpp  decoding_facets.cpp  encoding_conversion.cpp  extend_input_base64.cpp  extend_input_ipv4.cpp  extend_input_ipv6.cpp  extend_input_template.cpp  extend_output_toQString.cpp  facets.cpp  facets_pack_as_input.cpp  format_functions.cpp  ftuple_as_input.cpp  ftuple_as_input_arg.cpp  joins.cpp  numpunct_facets.cpp  range_input.cpp  syntax_samples.cpp  trivial_formatting.cpp  trivial_sample.cpp  width_calculation_in_encoding_conversion.cpp
example/v1/: Jamfile.v2  facets.cpp  ftuple_as_input_arg.cpp  joins.cpp
examples/: CMakeLists.txt  appendQString.cpp  cuda.cu  encoding_conversion.cpp  extend_input_base64.cpp  extend_input_ipv4.cpp  extend_input_ipv6.cpp  extend_input_point2D.cpp  extend_input_std_complex.cpp  extend_input_std_complex_simple.cpp  extend_input_std_complex_v2.cpp  extend_input_template.cpp  facets_pack_as_input.cpp  joins.cpp  llfio.cpp  override_bool.cpp  overview.cpp  range_input.cpp  readme_md.cpp  std_complex_printer.cpp  toQString.cpp  tr_string.cpp  transcoding_error_notifier.cpp  transcoding_notifier.cpp
examples/v1/: Jamfile.v2  facets.cpp  joins.cpp  trivial_formatting.cpp  trivial_sample.cpp
performance/: CMakeLists.txt  CMakelists.txt  Jamfile  calculate_size.cpp  from_utf32.cpp  input_float.cpp  input_int.cpp  int.cpp  join.cpp  loop_timer.cpp  loop_timer.hpp  make_string.cpp  measure_time.hpp  numpunct.cpp  range.cpp  tmp_tests.cpp  to_FILE.cpp  to_FILE_wide.cpp  to_char_ptr.cpp  to_string.cpp  to_utf32.cpp  tr_string.cpp  utf16_to_utf8.cpp  utf32_to_utf8.cpp  utf8_to_utf16.cpp  utf8_to_utf32.cpp  versus_sprintf.cpp  width_calculation.cpp
performance/compilation/: Makefile  args.hpp  run_benchmarks.2.py  run_benchmarks.py  run_tests.sh  sample1_BoostFormat.cpp  sample1_BoostStringify.cpp  sample1_BoostStringify_header_only.cpp  sample1_BoostStringify_linked_lib.cpp  sample1_fmtlib.cpp  sample1_fmtlib_header_only.cpp  sample1_fprintf.cpp  sample1_ostream.cpp  sample2_BoostStringify.cpp  sample2_BoostStringify_header_only.cpp  sample2_BoostStringify_static_lib.cpp  sample2_fmtlib.cpp  sample2_fmtlib_header_only.cpp  sample3.cpp  to_FILE_fmtlib.cpp  to_FILE_fmtlib_ho.cpp  to_FILE_fprintf.cpp  to_FILE_strf.cpp  to_FILE_stringify.cpp  to_FILE_stringify_as.cpp  to_FILE_stringify_as_ho.cpp  to_FILE_stringify_ho.cpp  to_FILE_stringify_tr.cpp  to_FILE_stringify_tr_ho.cpp  to_charptr_fmtlib.cpp  to_charptr_fmtlib_ho.cpp  to_charptr_stringify.cpp  to_charptr_stringify_as.cpp  (+22 more)
test/: CMakeLists.txt  CMakelists.txt  Jamfile.v2  assembly_string.cpp  basic_tests.cpp  cfile_writer.cpp  char_writer_test.cpp  constrained_fpe.cpp  cstr_writer.cpp  cuda_inclusion.cu  dispatcher_with_move_only_arg.cpp  dynamic_charset.cpp  encode_char.cpp  encode_fill.cpp  error_code_emitter_arg.hpp  exception_thrower_arg.hpp  facets_pack.cpp  facets_pack_merge.cpp  formatting_test.cpp  ftuple_merge_test.cpp  ftuple_test.cpp  input_bool.cpp  input_char.cpp  input_char32.cpp  input_char_test.cpp  input_facets_pack.cpp  input_float.cpp  input_int.cpp  input_int_test.cpp  input_range.cpp  input_string.cpp  input_string_test.cpp  int_writer_test.cpp  join.cpp  join_test.cpp  lightweight_test_label.hpp  listf_int_writer_test.cpp  listf_string_writer_test.cpp  locale.cpp  main.cpp  (+26 more)
tests/: CMakeLists.txt  add_and_override_printable_types.cpp  cfile_writer.cpp  ch32_width_and_gcb_prop.cpp  cstr_destination.cpp  cstr_writer.cpp  cuda_inclusion.cu  decode_encode.cpp  decode_encode_to_dst.cpp  decode_encode_to_ptr.cpp  destination.cpp  dispatcher_with_move_only_arg.cpp  do_transcode.cpp  do_unsafe_transcode.cpp  dynamic_charset.cpp  encode_char.cpp  encode_fill.cpp  facets_pack.cpp  facets_pack_merge.cpp  fuzzy_input_float.cpp  input_bool.cpp  input_char.cpp  input_char32.cpp  input_facets_pack.cpp  input_float.cpp  input_int.cpp  input_range.cpp  input_string.cpp  input_tr_string.cpp  join.cpp  locale.cpp  main.cpp  main_cuda.cu  miscellaneous.cpp  numpunct.cpp  outbuff.cpp  output_buffer.cpp  output_buffer_iterator.cpp  override_printable.cpp  range_writer.cpp  (+25 more)
(+566 files in other folders)
